--- a/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
+++ b/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
@@ -12,66 +12,65 @@ tags:
 author: Ed Greenwood
 ---
 
-
 Древние калишиты поклонялись пантеону божеств, которых они называли Девятью
 
 ## Анахтир
 
-Анахтир: справедливость, возмездие, закон, суд, анализ, философия, порядок, мудрость
+**Анахтир**: справедливость, возмездие, закон, суд, анализ, философия, порядок, мудрость
 
-[старый обветренный боец в потрепанных доспехах, способный противостоять любой силе и удару; суровый, обладал способностью телепортировать любое оружие в свои раскрытые голые руки, а также способностью разбить или починить любое оружие в мгновенной вспышке сияния; неутомимый, упорный, неотвратимый в конце концов; немногословный, спокойный и непримиримый, никогда не гневается; дед среди богов].
+[старый обветренный боец в потрепанных доспехах, способный противостоять любой силе и удару; суровый, обладал способностью телепортировать любое оружие в свои раскрытые голые руки, а также способностью разбить или починить любое оружие в мгновенной вспышке сияния; неутомимый, упорный, неотвратимый в конце концов; немногословный, спокойный и непримиримый, никогда не гневается; фигура подобная деду для остальных богов].
 
 ## Бхаэлрос
 
-Бхаэлрос: бог бури, природных разрушений, диких зверей, охоты, импульсивной спонтанности
+**Бхаэлрос**: бог бури, природных разрушений, диких зверей, охоты, импульсивной спонтанности
 
 [высокий, худой, беспокойный, постоянно движущийся человек с дикими волосами длиной до телят, которые также всегда двигались по собственной воле и во всех направлениях, как ищущие змеи, был обнажен, но одет в ползущие, рычащие молнии над клубящимся дымом; часто впадал в ярость и бушевал, крича и проклиная, а его клятвы были на урхабре, древнем языке магии и заклинаний; враждовал с другими богами, считался опрометчивым, безрассудным и противоречивым; ходил нагим в любую погоду, мог прикрываться ветром, который по его воле собирался в фиолетово-серый дым позади и вокруг него, и метать из рук осветительные болты].
 
 ## Чассаура
 
-Чассаура (произносится как «Час-АВЕ-ра»): сельское хозяйство и природные богатства, травничество, медицина
+**Чассаура** (произносится как «Час-АВЕ-ра»): сельское хозяйство и природные богатства, травничество, медицина
 
 [сестра Бхаэлроса, тоже высокая и худая, с движущимися локонами волос длиной до щиколоток, от оранжевого до медно-красного цвета; ее обнаженное тело всегда окутано зелеными листьями и растущими лианами; она могла безмолвно  подчинить своей воле все лиственные растения и заставляя их расти с поразительной, опутывающей, раскалывающей камни скоростью и силой, но гораздо больше времени уделяла изгнанию болезней и очищению от увядания; по ее милости желанные дикие растения моментально начинали светиться, когда кто-то искал их в темноте или в большой нужде; во время сражения она заставляет природу разрастаться и душить вещи с ужасающей скоростью, или обрушивала огромные деревья, чтобы расплющить врагов].
 
 ## Харук
 
-Харук (произносится как «Харр-ок»): огонь, солнце, война, золото (древние калишиты верили, что золото - это кровь и души жестоко убитых, вывернутые на огне, чтобы превратить свинец в золото)
+**Харук** (произносится как «Харр-ок»): огонь, солнце, война, золото (древние калишиты верили, что золото - это кровь и души жестоко убитых, вывернутые на огне, чтобы превратить свинец в золото)
 
 [имел черноволосые бороду и усы , которые могли загораться по его желанию, не сгорая и не причиняя ему вреда, но воспламеняя других и все вещества, которые он не носил на себе или не нес с собой; гордый, громкий, величественный, харизматичный и доминирующий, обычно облаченный в золотые доспехи, которые разлетались при каждом ударе, обнажая его кожу, под которой бушевал огонь, и лишь мгновение спустя вновь превращались в полный доспех, закрывающий его; Он мог кричать в такт флейте, как фанфары труб (калишиты считали, что боевые рога были созданы, чтобы пытаться звучать как он), и произносить Слова Силы огромной силы и разрушения; своевольный, хотел добиться своего и победить].
 
 ## Ильматер
 
-Ильматер: страдание, самопожертвование, боль, выносливость и упорство, наказание, излечение
+**Ильматер**: страдание, самопожертвование, боль, выносливость и упорство, наказание, излечение
 
 [невысокий, домашний, но добродушный человек с искривленными конечностями, поэтому хромал и ходил шаркающей походкой, но мог ходить и стоять на пустом воздухе, как на твердой земле; его часто видели босым и одетым в лохмотья; его след оставлял пятна крови, которая, испаряясь, излечивала все, чего касалась; был самым маленьким и слабым из Девяти, но мог пережить самое жестокое обращение и упорно выбираться из руин и развалин, «продолжая идти вперед»; считался миротворцем среди богов, мягким и заботливым, но не услужливым].
 
 ## Яристра
 
-Яристра: торговля и путешествия, средства передвижения, налогообложение, богатство, логистика/хранение/сохранение
+**Яристра**: торговля и путешествия, средства передвижения, налогообложение, богатство, логистика/хранение/сохранение
 
-[иногда мужчина, иногда женщина, иногда в форме зверя, обычно в виде «большой кошки» или пегаса, но всегда красивая, с большими глазами в ободке с очень темными и густыми, непрерывными черными ресницами, Яристра была умна и красноречива, но часто любила говорить таинственно или загадывать загадки, и могла вычислять погрешности, вероятности и другие математические вычисления, такие как определение объемов, высот и расстояний с первого взгляда, в считанные мгновения; могла из ничего призывать колеса, оси или вожжи, чтобы помочь заблудившемуся путнику, и повышать или понижать температуру в небольшом ближайшем районе на целые сутки - и таким образом обеспечивать тепло в шторм или метель, или прохладу в жаркий день, или сушить промокшие ткани или дрова - и всегда выступала за свободу путешествий, и облегченное налогообложение и соблюдение законов, чтобы поощрять инновации и независимость: часто мягко конфликтовала с Анахтиром в этом отношении]
+[иногда мужчина, иногда женщина, иногда в форме зверя, обычно в виде «большой кошки» или пегаса, но всегда красивая, с большими глазами в ободке с очень темными и густыми, непрерывными черными ресницами, Яристра была умна и красноречива, но часто любила говорить таинственно или загадывать загадки, и могла вычислять погрешности, вероятности и другие математические вычисления, такие как определение объемов, высот и расстояний с первого взгляда, в считанные мгновения; могла из ничего призывать колеса, оси или вожжи, чтобы помочь заблудившемуся путнику, и повышать или понижать температуру в небольшом ближайшем районе на целые сутки - и таким образом обеспечивать тепло в шторм или метель, или прохладу в жаркий день, или сушить промокшие ткани или дрова - и всегда выступала за свободу путешествий, и облегченное налогообложение и соблюдение законов, чтобы поощрять инновации и независимость: часто мягко конфликтовала с **Анахтиром** в этом отношении]
 
 ## Мраэтра
 
-Мраэтра: богиня очага, воспитания, дома, семьи, любви, дружбы, материнства и обучения
+**Мраэтра**: богиня очага, воспитания, дома, семьи, любви, дружбы, материнства и обучения
 
 [всегда выглядела как высокая пышногрудая женщина в бордовой одежде, теплая, с мерцающим сиянием огня из-под юбок и по рукам; у нее были  пурпурно-рубиново-красные волосы длиной до щиколоток, окутывающие ее как большой панцирь, а ее лицо обычно было в тени, и только глаза и готовая улыбка светились из нее; ее голос был мягким и успокаивающим, ее манеры дружелюбными и заботливыми, и она была бесстрашной, противостоящей всем и всему; известна тем, что защищала детей от их собственных глупостей и ошибок, а также телепортировала целые семьи в безопасное место, когда грозила беда, например, набег или пожар в доме; по ее милости вспоминались забытые имена, и она обладала уникальным среди богов талантом редактировать воспоминания смертных, чтобы смягчить боль, горе и ненависть].
 
 ## Наланрун («Леди Луна»)
 
-Наланрун («Леди Луна»): ночь, тьма, тайна, луна, воровство и хитрость
+**Наланрун** («Леди Луна»): ночь, тьма, тайна, луна, воровство и хитрость
 
 [грациозная, плавная, пышная, но обычно видимая только как извилистые движения, усиленные клубящимся черным плащом с мягкими тенями, ее лицо всегда скрыто и видимо только при лунном свете, кроме темных, но окруженных лунным сиянием глаз; низкий и мурлыкающий голос, кокетливый, но со стальной решимостью, скрытой под ним. Известна тем, что исчезает, чтобы через мгновение появиться в другом месте, а также тем, что разжигает интриги среди смертных, распространяет информацию, дезинформацию и даже иллюзии, чтобы манипулировать смертными, и неустанно добавляет трепет, удивление и тайну в жизнь смертных, но не для того, чтобы способствовать хаосу и беспорядкам, а скорее для того, чтобы люди были заинтригованы и сомневались в своих убеждениях, целях и понимании того, что является истинным и правильным и к чему следует стремиться. Некоторые называли ее «Изменяющей» за ее роль в том, что она заставляла людей менять свои убеждения и приверженность, а также направления их жизни].
 
 ## Кистарр
 
-Кистарр (произносится «Кисс-тар»): магия, как божественная, так и арканная, но не «от природы»
+**Кистарр** (произносится «Кисс-тар»): магия, как божественная, так и арканная, но не «от природы»
 
 [иногда мужчина, но чаще женщина, всегда одета в темную звездно-полосатую (в смысле, в ней мерцают звезды и иногда вспыхивают падающие звезды) полумаску (закрывающую верхнюю часть лица), эта маска является ее храмовым символом, и ее можно увидеть парящей в воздухе над ее алтарями; мягкая и нежная в манерах и речи, но стремительно смертоносная, если ей перечить, в виде точных и очень мощных магических атак, обычно лучей концентрированной смертоносной силы; говорит редко и иногда загадочно, может искривить, остановить или усилить любую магию, включая магию остальных Девяти, и поэтому может пройти невредимой через бушующие пожары, молнии и взрывы, насылаемые заклинаниями волшебников; выступает в роли ангела-хранителя для одаренных людей, способных создавать новые заклинания, экспериментировать с магией и обучать ей других, а также наносит удары правителям и другим людям, которые пытаются принудить, заключить в тюрьму или юридически ограничить обладателей магии; в редких случаях становится беспокойной и выпускает дикую магию в мир в определенных местах, где на короткое время происходят всевозможные «странные» вещи, в похожей на Дикую Охоту гонке, распространяя путь спонтанных магических эффектов, которые имеют побочный эффект перезарядки близлежащих магических предметов, заставляя существующие врата светиться и открываться, оставляя после себя магическую энергию в бассейнах и руинах, которые светятся глубоким синим, периодически, и так далее].
 
 ## Калишиты древнего Калимшана, которые поклонялись Девяти
 
-Был могущественный верховный жрец, представлявший всех Девятерых, который обладал огромной светской властью на протяжении большей части своей долгой жизни (80 с лишним лет), авторитарный человек невысокого роста, светловолосый и не очень юморной, по имени Меритор. Он предпочитал использовать титул «Возвышенный слуга», носил высокий овальный головной убор, вокруг которого вращалось множество магических драгоценных камней (иун-камни? история не подтверждает), и носил витиеватый посох вдвое выше его самого, который мог испускать боевую магию в виде светящихся лучей.
+Был могущественный верховный жрец, представлявший всех Девятерых, который обладал огромной светской властью на протяжении большей части своей долгой жизни (80 с лишним лет), авторитарный человек невысокого роста, светловолосый и не очень юморной, по имени **Меритор**. Он предпочитал использовать титул «Возвышенный слуга», носил высокий овальный головной убор, вокруг которого вращалось множество магических драгоценных камней (иун-камни? история не подтверждает), и носил витиеватый посох вдвое выше его самого, который мог испускать боевую магию в виде светящихся лучей.
 
 Благодаря отсутствию чувства юмора и напыщенности **Меритор** стал известен как «Меритор Великолепный» среди врагов и торговых соперников Калимшана.
 
