--- a/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
+++ b/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
@@ -24,7 +24,7 @@ author: Ed Greenwood
 
 **Бхаэлрос**: бог бури, природных разрушений, диких зверей, охоты, импульсивной спонтанности
 
-[высокий, худой, беспокойный, постоянно движущийся человек с дикими волосами длиной до телят, которые также всегда двигались по собственной воле и во всех направлениях, как ищущие змеи, был обнажен, но одет в ползущие, рычащие молнии над клубящимся дымом; часто впадал в ярость и бушевал, крича и проклиная, а его клятвы были на урхабре, древнем языке магии и заклинаний; враждовал с другими богами, считался опрометчивым, безрассудным и противоречивым; ходил нагим в любую погоду, мог прикрываться ветром, который по его воле собирался в фиолетово-серый дым позади и вокруг него, и метать из рук осветительные болты].
+[высокий, худой, беспокойный, постоянно движущийся человек с дикими волосами длиной до икр, которые также всегда двигались по собственной воле и во всех направлениях, как ищущие змеи, был обнажен, но одет в ползущие, рычащие молнии над клубящимся дымом; часто впадал в ярость и бушевал, крича и проклиная, а его клятвы были на урхабре, древнем языке магии и заклинаний; враждовал с другими богами, считался опрометчивым, безрассудным и противоречивым; ходил нагим в любую погоду, мог прикрываться ветром, который по его воле собирался в фиолетово-серый дым позади и вокруг него, и метать из рук осветительные болты].
 
 ## Чассаура
 
