Null dragon god of death

--- a/src/content/posts/forgotten-realms/lunnoe-more-moonsea.mdx
+++ b/src/content/posts/forgotten-realms/lunnoe-more-moonsea.mdx
@@ -1,13 +1,10 @@
 ---
-draft: true
 title: "ЛУННОЕ МОРЕ - MOONSEA"
 description: "ЛУННОЕ МОРЕ - MOONSEA"
 date: "2018-03-13"
 tags:
-  - "Забытые Королевства"
-  - "Forgotten Realms"
-
-  - "homebrew"
+  - Забытые Королевства
+  - Лунное море
 ---
 
 Добро пожаловать в регион Лунного Моря. Это суровый край, достаточно сильно по настрою и атмосфере отличающийся от других регионов Фаэруна
