--- a/src/content/posts/forgotten-realms/null-dragon-god-of-death.mdx
+++ b/src/content/posts/forgotten-realms/null-dragon-god-of-death.mdx
@@ -24,7 +24,9 @@ cover: '~assets/covers/null.png'
 
 В любом из своих аспектов Нулл может сотворить любое арканическое некромантическое заклинание и любое божественное некромантическое заклинание в один и тот же раунд, используя оба заклинания как заклинатель 19-го уровня, у которого никогда не кончаются заклинания, но он не может «законсервировать» неиспользованные круги заклинаний (если Нулл не сотворит одно или оба заклинания в любом раунде, он не сможет сотворить их как «дополнительные» заклинания в следующем раунде).
 
-В любом раунде, в котором он не сотворяет два заклинания, Налл может наложить на себя божественное некромантическое заклинание 30-го уровня.
+В любом раунде, в котором он не сотворяет два заклинания, Налл может наложить на себя божественное некромантическое заклинание как заклинатель 30-го уровня.
+
+> Примечание переводчика: игромеханика третьей редакции
 
 Если Нулл убит, он никогда не исчезает по-настоящему. Его душа путешествует в виде змеевидного, длиннохвостого, но аморфного под нагрузкой (способного воссоединяться, если его рассредоточить) сгустка холодной, злобной черноты по планам к месту, где он обитает - в ту часть Дракона, где Карцери пересекается с Внешними Землями, в той самой точке, где пересекаются Плоскость Теней и Плоскость Негативной Энергии, в бесконечном пульсирующем мраке, где темные облака проплывают, как акулы, и крошечные болты негативной энергии трещат тут и там. Когда душа Нулла достигает его дома, для нее, как и для любой драконьей души, создается тело (хотя, если он зол и спешит отомстить, он может погрузиться в тело любого драколича в Драконьем Гнезде, захватить его и использовать как свое собственное, изгнав душу, что причиняет ей мучения, но если это сделано в Драконьем Гнезде, значит, да, для нее создается другое тело, прекращающее ее мучения).
 
