--- a/src/content/posts/forgotten-realms/clergy-of-myrkul.mdx
+++ b/src/content/posts/forgotten-realms/clergy-of-myrkul.mdx
@@ -1,5 +1,5 @@
 ---
-title: Служить Владыке Костей - миркуулитское духовенство в 1499 ЛД
+title: Служить Владыке Костей - миркулитское духовенство в 1499 ЛД
 description: ПЕРЕВОД статьи Эда Гринвуда про жрецов Миркула после Второго Раскола в Забытых Королевствах
 date: 2025-02-08
 tags:
