--- a/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
+++ b/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
@@ -9,10 +9,10 @@ tags:
   - Ваэраун
   - Ed Greenwood
 author: Ed Greenwood
-cover: '~assets/covers/Vhaeraun.jpg'
+cover: '~assets/covers/vhaeraun.jpg'
 ---
 
-![Vhaeraun](Vhaeraun.webp)
+![Vhaeraun](/images/vhaeraun.webp)
 
 Королевства - большой мир, и его предания местами глубоки и богаты, а местами - не более чем нитяной плащ. Но я работаю над ним уже шестьдесят лет, а последние тридцать семь из них - множество других людей, некоторые из которых очень талантливые творцы.
 
@@ -20,7 +20,7 @@ cover: '~assets/covers/Vhaeraun.jpg'
 
 Чтобы Королевства были живыми в нашем сознании, они должны постоянно меняться, их история должна постоянно расширяться. Один из лучших способов сделать это - не садиться за стол и создавать то, что кажется нам крутым прямо сейчас, а отвечать на ваши вопросы по истории - то, о чем вам нужно знать, чтобы провести свою кампанию в Realms или создать свои собственные истории и легенды о Королевствах.
 
-![Vhaeraun](vhaeraunsymbol.jpg)
+![Vhaeraun](/images/vhaeraunsymbol.jpg)
 
 Итак, перед вами видео с ответами. И на этот раз мы отвечаем на эти вопросы:
 
