--- a/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
+++ b/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
@@ -24,7 +24,7 @@ cover: '~assets/covers/vhaeraun.jpg'
 
 Итак, перед вами видео с ответами. И на этот раз мы отвечаем на эти вопросы:
 
-##  В Историях Королевства (Realmslore) говорится, что существуют последователи Ваэрауна, не являющиеся дроу. Как и почему недроу следуют за ним, если одно из учений Ваэрауна - «превосходство дроу» (как они с этим справляются?)?  И очевидный вопрос, который следует за этим: могут ли дроу стать жрецами Ваэрауна?
+##  В Историях Королевства (Realmslore) говорится, что существуют последователи Ваэрауна, не являющиеся дроу. Как и почему недроу следуют за ним, если одно из учений Ваэрауна - «превосходство дроу» (как они с этим справляются?)?  И очевидный вопрос, который следует за этим: могут ли не-дроу стать жрецами Ваэрауна?
 
 Итак, вот краткие ответы: есть дроу, которые считают, что мир в его нынешнем виде (по крайней мере, в их локальном опыте) настолько плох или неполноценен, что он, скорее всего, станет лучше под руководством дроу, как это видит и пропагандирует Ваэраун (а не Лолт).
 
