--- a/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
+++ b/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
@@ -12,7 +12,7 @@ author: Ed Greenwood
 cover: '~assets/covers/vhaeraun.jpg'
 ---
 
-![Vhaeraun](/images/vhaeraun.webp)
+![Vhaeraun](/images/Vhaeraun.webp)
 
 Королевства - большой мир, и его предания местами глубоки и богаты, а местами - не более чем нитяной плащ. Но я работаю над ним уже шестьдесят лет, а последние тридцать семь из них - множество других людей, некоторые из которых очень талантливые творцы.
 
