--- a/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
+++ b/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
@@ -20,7 +20,7 @@ cover: '~assets/covers/vhaeraun.jpg'
 
 Чтобы Королевства были живыми в нашем сознании, они должны постоянно меняться, их история должна постоянно расширяться. Один из лучших способов сделать это - не садиться за стол и создавать то, что кажется нам крутым прямо сейчас, а отвечать на ваши вопросы по истории - то, о чем вам нужно знать, чтобы провести свою кампанию в Realms или создать свои собственные истории и легенды о Королевствах.
 
-![Vhaeraun](/images/vhaeraunsymbol.jpg)
+![Символ Ваэрауна](/images/vhaeraunsymbol.jpg)
 
 Итак, перед вами видео с ответами. И на этот раз мы отвечаем на эти вопросы:
 
@@ -67,6 +67,8 @@ cover: '~assets/covers/vhaeraun.jpg'
 Итак, это первый взгляд на то, что такое преклонить колени перед Владыкой Тени, если вы не дроу. Мы, вероятно, углубимся в духовенство Вхаэруна в одном из следующих видео, но сначала нужно ответить на множество других вопросов по Историям Королевств (realmslore).
 
 Как всегда: Королевства навсегда!
+
+![Vhaeraun](/images/vhaeraun.jpg)
 
 ---
 
