--- a/src/content/posts/forgotten-realms/clergy-of-myrkul.mdx
+++ b/src/content/posts/forgotten-realms/clergy-of-myrkul.mdx
@@ -29,13 +29,14 @@ cover: '~assets/covers/myrkul-symbol.webp'
 
 Святилища Миркула могут быть установлены где угодно, могут появляться и исчезать, но должны быть освящены специальной молитвой и посыпаны костяной пылью (из более чем одного человеческого источника).
 
-Храмов Миркула немного, и большинство из тех, что сохранились до наших дней, управляются рогатыми предвестниками (благочестивыми клериками Миркула, которые носили или держали в руках Корону Рога, когда она была напитана сущностью Миркула, и были изменены таким образом, превратившись в лихоподобных существ долгой жизни и многих сил над нежитью, у которых из головы выросли замысловатые, похожие на оленьи рога, а в глазах появилось сильное жгучее красное свечение).
+Храмов Миркула немного, и большинство из тех, что сохранились до наших дней, управляются рогатыми предвестниками (благочестивыми клериками Миркула, которые носили или держали в руках Корону Рога, когда она была напитана сущностью Миркула, и были изменены таким образом, превратившись в личеподобных существ долгой жизни и обладающие многими сил над нежитью, у которых из головы выросли замысловатые, похожие на оленьи рога, а в глазах появилось сильное жгучее красное свечение).
 
 Большинство нынешних храмов Миркула - это вновь занятые бывшие храмы: крематории или мавзолеи над похожими на подземелья подземными катакомбами (погребальными туннелями и камерами), щедро снабженными каменными статуями (мертвых и разлагающихся людей), горгульями и бродячей нежитью (большинство из них скелеты; ожившие кости громадных монстров, а также людей).
 
 Известные храмы, действовавшие в 1499 году, включают:
 
-**Черные чертоги:** на лесной поляне у юго-восточного края Валдата, в Тетире, скромный разрушенный «замок барона-разбойника», выжженный до черноты давним пожаром, уничтожившим его, когда барон был убит, был вновь занят Жнецами и стал центром обучения, центром поклонения и местом пополнения запасов для жрецов-миркулитов, действующих вдоль и поперек Побережья Мечей. Древний рок (Elder Doom) Хауннет Корварр (Рогатый Предвестник) возглавляет его, и он либо безумен, либо ведет постоянные разговоры шепотом с самим Миркулом. Под его руководством это место стало энергетическим центром возрождения Церкви Костей.
+**Черные чертоги:** на лесной поляне у юго-восточного края Валдата, в Тетире, скромный разрушенный «замок барона-разбойника», выжженный до черноты давним пожаром, уничтожившим его
+тогда же когда барон был убит, был вновь занят Жнецами и стал центром обучения, центром поклонения и местом пополнения запасов для жрецов-миркулитов, действующих вдоль и поперек Побережья Мечей. Древний рок (Elder Doom) Хауннет Корварр (Рогатый Предвестник) возглавляет его, и он либо безумен, либо ведет постоянные разговоры шепотом с самим Миркулом. Под его руководством это место стало энергетическим центром возрождения Церкви Костей.
 
 > Примечание переводчика: [Рогатый предвестник - статья на frwiki](https://forgottenrealms.fandom.com/wiki/Horned_harbinger)
 
@@ -80,7 +81,7 @@ cover: '~assets/covers/myrkul-symbol.webp'
 
 Как и до своего уничтожения в 1358 году, Владыка Костей велит своим священникам распространять среди смертных два мнения о себе: что они - святые служители, отличающиеся абсолютным терпением и благонадежностью, и что прикосновение к жрецу Миркула приведет к верной смерти. (Это не совсем так, но горстка Несущих Судьбу путешествует по Королевствам, убивая тех, кто насмехается над Миркулом или совершает насилие над жрецами Миркула, и их действия наводят настоящий страх).
 
-Келемвор остается Владыкой мертвых; Миркул - Владыка смерти и не-смерти, а его жрецы занимаются вопросами умирания, смерти и не-смерти. Фокусом их интересов являются умирающие, личи и некроманты (всех их нужно направлять и по возможности подружиться с ними, чтобы они стали восприимчивы к руководству Церкви). Они не принимают никакого участия в убийствах (как самих, так и их планировании, если таковое имело место), ибо это входит в священные полномочия бога Бхаала.
+Келемвор остается Владыкой мертвых; Миркул - Владыка смерти и не-смерти, а его жрецы занимаются вопросами умирания, смерти и не-смерти. Фокусом их интересов являются умирающие, личи и некроманты (всех их нужно направлять и по возможности подружиться с ними, чтобы они стали восприимчивы к руководству Церкви). Они не принимают никакого участия в убийствах (как самих, так и их планировании, если таковое имело место), ибо это входит в священные полномочия бога Баала.
 
 Для тех, кто считает, что страх смерти, вшитый Жнецами, противоречит тому, чтобы утешать умирающих и их семьи: Церковь Миркула всегда была такой. Миркул хочет, чтобы на его священнослужителей не нападали и не истребляли (их и так немного), поэтому он хочет, чтобы люди боялись того, что может случиться, если напасть на священника Миркула, и боялись его (приравнивая страх к уважению). Если бы его священнослужителей воспринимали просто как разносчиков смерти, а не как утешителей или помощников, их бы атаковали на месте. Поэтому они принимают полезную для живых роль.
 
