--- a/src/content/posts/forgotten-realms/beastlord.mdx
+++ b/src/content/posts/forgotten-realms/beastlord.mdx
@@ -53,6 +53,9 @@ cover: '~assets/covers/malarsymbol.jpg'
 Священнослужители Малара собирают всю Кровь Малара, какую только могут, независимо от того, какую форму принимает Малар, когда проливает ее. Из нее они готовят целебные зелья, которые устраняют повреждения, но вместе с излечением приносят сильную жгучую боль.
 Большинство священнослужителей маларитов используют Режущие когти (Slashing Talons) и более мощные боевые заклинания Разрывающие когти (Rending Talons), а также более защитное заклинание Стена Рогов (Wall of Goring):
 
+
+<Aside>
+
 #### Стена Рогов
 *4-й круг эвокации*
 ___
@@ -64,6 +67,8 @@ ___
 Вы создаете вертикальную стену из вихрящихся, острых как бритва рогов, созданных из магической энергии. Стена появляется в радиусе действия и действует в течение всего времени. Вы можете создать прямую стену длиной до 60 футов, высотой 20 футов и толщиной 5 футов или кольцевую стену диаметром до 40 футов, высотой 20 футов и толщиной 5 футов. Стена обеспечивает укрытие на три четверти для существ, находящихся за ней, а ее пространство является труднопроходимой местностью.
 Когда существо впервые за ход входит в зону стены или начинает там свой ход, оно должно совершить спасбросок Ловкости. При неудачном спасброске существо получает 4к6 колющего урона. При успешном спасброске существо получает половину этого урона
 **Используя более высокие круги.** Когда вы сотворяете это заклинание, используя ячейку заклинания 5-го круга или выше, урон увеличивается на 2к6 за каждый круг ячейки выше 4-го.
+
+</Aside>
 
 ## Текущие цели и интересы Малара
 
