--- a/src/content/posts/forgotten-realms/beastlord.mdx
+++ b/src/content/posts/forgotten-realms/beastlord.mdx
@@ -78,4 +78,8 @@ ___
 
 Малар также стремится через сны, посылаемые поклонникам, и бормочущие слова советов верующим, произносимые его духовенством по всем королевствам, разжечь в разумных людях жажду крови, заставить их поддаться своей дикой природе и вести себя более зверино, когда это возможно.
 
- 
+ ---
+
+ [Статья про Малара на frwiki](https://forgottenrealms.fandom.com/wiki/Malar)
+
+ [Статья про Малара на thieve's guild](https://www.thievesguild.cc/gods/god?godid=94)
