--- a/src/content/posts/forgotten-realms/beastlord.mdx
+++ b/src/content/posts/forgotten-realms/beastlord.mdx
@@ -61,7 +61,7 @@ cover: '~assets/covers/malarsymbol.jpg'
 ___
 - **Время сотворения:** 1 действие
 - **Дистанция:** 60 футов
-- **CompКомпонентыonents:** В, С, М (осколок кости или оленьего рога)
+- **Компоненты:** В, С, М (осколок кости или оленьего рога)
 - **Длительность:** 1 минута/уровень, если не прекратится раньше по воле заклинателя (это использование воли не требует действия).
 
 Вы создаете вертикальную стену из вихрящихся, острых как бритва рогов, созданных из магической энергии. Стена появляется в радиусе действия и действует в течение всего времени. Вы можете создать прямую стену длиной до 60 футов, высотой 20 футов и толщиной 5 футов или кольцевую стену диаметром до 40 футов, высотой 20 футов и толщиной 5 футов. Стена обеспечивает укрытие на три четверти для существ, находящихся за ней, а ее пространство является труднопроходимой местностью.
