--- a/src/content/posts/forgotten-realms/beastlord.mdx
+++ b/src/content/posts/forgotten-realms/beastlord.mdx
@@ -23,7 +23,7 @@ cover: '~assets/covers/malarsymbol.jpg'
 
 ## Происхождение
 
-Малар говорит своим старшим священникам, что он «был всегда», и осознал это, когда из тумана появились первые леса. Он охотился и убивал, когда другие животные были всего лишь бесформенными, мяукающими червями (гигантскими версиями современных росяных червей). Эльминстер считает, что Кровавый бог рассказывал себе и другим эту историю так часто и так долго, что теперь сам в нее верит. Эл считает, что Малар - «младший бог», но для смертных такие понятия относительны; он, несомненно, был активен в Королевствах задолго до начала Далереконинга. Он появился после того, как Сильванус оставил свою дикую сторону, чтобы принять Равновесие (после возвышения Чонти), и сейчас он снова находится под властью Сильвануса, хотя до сих пор Сильванус ничуть не обуздал Малара (насколько известно смертным).
+Малар говорит своим старшим священникам, что он «был всегда», и осознал это, когда из тумана появились первые леса. Он охотился и убивал, когда другие животные были всего лишь бесформенными, мяукающими червями (гигантскими версиями современных росяных червей). Эльминстер считает, что Кровавый бог рассказывал себе и другим эту историю так часто и так долго, что теперь сам в нее верит. Эл считает, что Малар - «младший бог», но для смертных такие понятия относительны; он, несомненно, был активен в Королевствах задолго до начала Летоисчисления Долин. Он появился после того, как Сильванус оставил свою дикую сторону, чтобы принять Равновесие (после возвышения Чонти), и сейчас он снова находится под властью Сильвануса, хотя до сих пор Сильванус ничуть не обуздал Малара (насколько известно смертным).
 
 ## Как Малар видит себя и Торил
 
@@ -42,13 +42,13 @@ cover: '~assets/covers/malarsymbol.jpg'
 
 **Зверь** - двенадцатифутовый, гладкий и проворный пантероподобный самец огромной кошки, который может легко балансировать на задних лапах. Хвост (также двенадцати футов в длину) длинный, заканчивается большим хохолком из черных волос, за которым скрывается сильная человекоподобная хватательная рука (ни левая, ни правая, большие пальцы расположены по обе стороны ладони), способная размахивать и бить как оружие. Длинная черная шерсть тела покрыта потеками его собственной крови, которая бесконечно капает с его длинных передних клыков и когтей. В этом облике Малар может рычать, рычать и реветь, но не говорить. В облике Зверя Малар способен прыгать с высоты девяноста футов, приземляясь на ноги практически после любого падения.
 
-**Хозяин охоты** - длинношерстный (волосы достаточно длинные, чтобы скрыть гениталии) двуногий гуманоид ростом в шестнадцать футов, с длинным черным хвостом, как у лошади, упругими копытами, способными цепляться за лед и залитые водой рыхлые камни, и большим (20 конечные острые по всей длине рога), которые он может отращивать (кончики появляются на коже головы за несколько секунд, но на полный рост уходит целая минута) и втягивать (на полное исчезновение уходит три минуты, концы остаются твердыми и острыми, а остальная часть становится гибкой, уходя обратно в череп). У Мастера горящие глаза с черными зрачками, малиновой радужкой и алой склерой; в ярости они становятся яркими, светящимися изумрудно-зелеными. Вместо носа и рта с жесткой челюстью и зубами у Мастера есть «ухнувшая» (так люди обычно описывают влажный, хрипящий звук его дыхания) дыра, затянутая плотью: складки плоти окружают эту дыру-рот, и Малар может управлять ими, закрывая дыру или придавая ей форму. В результате он может говорить и формировать трубу для усиления лосиного блеяния или урчания, так что его «зов» можно услышать за милю. Его обычная речь как Хозяина - глубокое, рычащее бормотание, и он повышает голос до злобного рычания, если хочет, чтобы его голос прозвучал.
+**Мастер охоты** - длинношерстный (волосы достаточно длинные, чтобы скрыть гениталии) двуногий гуманоид ростом в шестнадцать футов, с длинным черным хвостом, как у лошади, упругими копытами, способными цепляться за лед и залитые водой рыхлые камни, и большими (20 конечные острые по всей длине) рогами, которые он может отращивать (кончики появляются на коже головы за несколько секунд, но на полный рост уходит целая минута) и втягивать (на полное исчезновение уходит три минуты, концы остаются твердыми и острыми, а остальная часть становится гибкой, уходя обратно в череп). У Мастера горящие глаза с черными зрачками, малиновой радужкой и алой склерой; в ярости они становятся яркими, светящимися изумрудно-зелеными. Вместо носа и рта с жесткой челюстью и зубами у Мастера есть «ухнувшая» (так люди обычно описывают влажный, хрипящий звук его дыхания) дыра, затянутая плотью: складки плоти окружают эту дыру-рот, и Малар может управлять ими, закрывая дыру или придавая ей форму. В результате он может говорить и формировать трубу для усиления лосиного блеяния или урчания, так что его «зов» можно услышать за милю. Его обычная речь как Мастера - глубокое, рычащее бормотание, и он повышает голос до злобного рычания, если хочет, чтобы его голос прозвучал.
 
 Однако после поражения от Нобаниона в Смутное время Малар часто появляется на Ториле в виде черного льва длиной около тридцати футов (плюс хвост), с багровыми когтями и глазами, чьи шаги отмечены туманом пролитой крови (выделяющейся из подушечек его лап; эта постоянная утечка крови, похоже, не ослабляет божество). В этом облике он может мурлыкать, рычать и говорить с четкой точностью, придыхательным, почти женским голосом.
 
 ## Некоторые исторические заметки о духовенстве Малара
 
-Духовенство Малара во время боя носит когти и когти на ремнях или вооружены дубинками, в которые вмонтированы рога и когти животного. Такие когти, когти и рога должны быть добыты из настоящих существ, а не выкованы или вырезаны в подражание настоящим. Если священник Малара не может достать такое оружие, допустимы ножи или короткие мечи, но по возможности они должны иметь костяные или оленьи рукояти или быть украшены когтями животного (даже если это просто украшение).
+Духовенство Малара во время боя носит когти и клыки на ремнях или вооружены дубинками, в которые вмонтированы рога и когти животного. Такие когти, клыки и рога должны быть добыты из настоящих существ, а не выкованы или вырезаны в подражание настоящим. Если священник Малара не может достать такое оружие, допустимы ножи или короткие мечи, но по возможности они должны иметь костяные или оленьи рукояти или быть украшены когтями животного (даже если это просто украшение).
 Священнослужители, которым приходится путешествовать или которые хотят произвести впечатление на мирян, часто носят плащи из шкур животного, дополненные хвостами. К ним часто пришивают дополнительные сохранившиеся когти и лапы других существ, чтобы они свисали с нижних краев; иногда это когти чешуйчатых рептилий и других существ, которые явно не соответствуют меховому источнику основного плаща. Сшивание несочетаемых мехов допустимо, но крупные шкурки одного животного предпочтительнее.
 Священнослужители Малара собирают всю Кровь Малара, какую только могут, независимо от того, какую форму принимает Малар, когда проливает ее. Из нее они готовят целебные зелья, которые устраняют повреждения, но вместе с излечением приносят сильную жгучую боль.
 Большинство священнослужителей маларитов используют Режущие когти (Slashing Talons) и более мощные боевые заклинания Разрывающие когти (Rending Talons), а также более защитное заклинание Стена Рогов (Wall of Goring):
